--- a/TheSyDeKick_tutorial.tex
+++ b/TheSyDeKick_tutorial.tex
@@ -47,7 +47,7 @@
 \institute[MNT]{Department of Micro and Nanosciences\\
 Aalto University, School of Electrical Engineering\\marko.kosunen@aalto.fi}
 
-\aaltofootertext{Analog macro releases}{\lectdate}{\arabic{page}/\pageref{LastPage}\ }
+\aaltofootertext{TheSyDeKicktutorial}{\lectdate}{\arabic{page}/\pageref{LastPage}\ }
 
 \date{\lectdate}
 
