Fix submodule addition

--- a/TheSyDeKick_tutorial.tex
+++ b/TheSyDeKick_tutorial.tex
@@ -277,8 +277,7 @@ git push --set-upstream origin master
 \begin{lstlisting}
 cd TheSyDeKick_project
 rm -rf Entities/<my_entity>
-git remote remove origin
-git remote submodule add  \
+git submodule add  \
     <URL of your TheSyDeKickgroup/<my_entity>.git Entities/<my_module>
 \end{lstlisting}
     \begin{itemize}
