--- a/TheSyDeKick_tutorial.tex
+++ b/TheSyDeKick_tutorial.tex
@@ -356,7 +356,7 @@ git push
     \begin{itemize}
         \item Edit the \emph{Docstring}
     \end{itemize}
-    \codeclip{./thesdk_template/Entities/myentity/myentity/__init__.py}
+    \codeclip{./myentity/myentity/__init__.py}
 \end{frame}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -368,7 +368,7 @@ git push
     \begin{itemize}
         \item Edit the \emph{package imports}
     \end{itemize}
-    \codeclip{./thesdk_template/Entities/myentity/myentity/__init__.py}
+    \codeclip{./myentity/myentity/__init__.py}
 \end{frame}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -380,7 +380,7 @@ git push
     \begin{itemize}
         \item Edit the \emph{Class definition}
     \end{itemize}
-    \codeclip{./thesdk_template/Entities/myentity/myentity/__init__.py}
+    \codeclip{./myentity/myentity/__init__.py}
 \end{frame}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -392,7 +392,7 @@ git push
     \begin{itemize}
         \item Edit the \emph{Main script}
     \end{itemize}
-    \codeclip{./thesdk_template/Entities/myentity/myentity/__init__.py}
+    \codeclip{./myentity/myentity/__init__.py}
 \end{frame}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -541,6 +541,20 @@ git push
 %}
 \end{frame}
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\renewcommand{\sectionname}{Next Steps}
+\subsection*{\sectionname}
+\begin{frame}[c]
+    \frametitle{\sectionname}
+    \begin{itemize}
+        \item Once you understand how to one entity is constructed,please
+            familiarize yoursel to \emph{inverter\_testbenchses} and
+            \emph{inverter\_tests} enetities.
+        \item By studying them yous should learn how to connect entities
+            together, and how to construct simulations for different
+            simulators.
+    \end{itemize}
+\end{frame}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \sectiontitle[Congratulations, You are DONE!]
 
